@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>522</width>
-    <height>496</height>
+    <width>571</width>
+    <height>549</height>
    </rect>
   </property>
   <property name="windowIcon" >
@@ -17,7 +17,7 @@
     <number>0</number>
    </property>
    <property name="spacing" >
-    <number>6</number>
+    <number>0</number>
    </property>
    <item>
     <widget class="QTabWidget" name="input_tab" >
@@ -96,186 +96,12 @@
       </attribute>
       <layout class="QGridLayout" >
        <property name="margin" >
-        <number>6</number>
+        <number>9</number>
        </property>
        <property name="spacing" >
         <number>6</number>
        </property>
-       <item rowspan="4" row="0" column="0" >
-        <layout class="QVBoxLayout" >
-         <property name="margin" >
-          <number>0</number>
-         </property>
-         <property name="spacing" >
-          <number>6</number>
-         </property>
-         <item>
-          <widget class="QLabel" name="mouse_icon" >
-           <property name="text" >
-            <string>icon</string>
-           </property>
-           <property name="wordWrap" >
-            <bool>false</bool>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <spacer>
-           <property name="orientation" >
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeType" >
-            <enum>QSizePolicy::Expanding</enum>
-           </property>
-           <property name="sizeHint" >
-            <size>
-             <width>20</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-        </layout>
-       </item>
-       <item row="0" column="1" >
-        <layout class="QVBoxLayout" >
-         <property name="margin" >
-          <number>0</number>
-         </property>
-         <property name="spacing" >
-          <number>6</number>
-         </property>
-         <item>
-          <widget class="QLabel" name="textLabel1_16" >
-           <property name="text" >
-            <string>Button functions:</string>
-           </property>
-           <property name="wordWrap" >
-            <bool>false</bool>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <layout class="QGridLayout" >
-           <property name="margin" >
-            <number>0</number>
-           </property>
-           <property name="spacing" >
-            <number>6</number>
-           </property>
-           <item row="3" column="0" colspan="2" >
-            <widget class="QLabel" name="label" >
-             <property name="text" >
-              <string>Mi&amp;ddle click</string>
-             </property>
-             <property name="buddy" >
-              <cstring>middle_click_combo</cstring>
-             </property>
-            </widget>
-           </item>
-           <item row="3" column="2" >
-            <widget class="QComboBox" name="middle_click_combo" />
-           </item>
-           <item row="3" column="3" colspan="2" >
-            <spacer>
-             <property name="orientation" >
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" >
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-           <item row="0" column="3" colspan="2" >
-            <spacer>
-             <property name="orientation" >
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeType" >
-              <enum>QSizePolicy::Expanding</enum>
-             </property>
-             <property name="sizeHint" >
-              <size>
-               <width>81</width>
-               <height>31</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-           <item row="0" column="2" >
-            <widget class="MyComboBox" name="left_click_combo" >
-             <property name="sizePolicy" >
-              <sizepolicy>
-               <hsizetype>7</hsizetype>
-               <vsizetype>0</vsizetype>
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="0" colspan="2" >
-            <widget class="QLabel" name="textLabel2_6" >
-             <property name="text" >
-              <string>&amp;Left click</string>
-             </property>
-             <property name="wordWrap" >
-              <bool>false</bool>
-             </property>
-             <property name="buddy" >
-              <cstring>left_click_combo</cstring>
-             </property>
-            </widget>
-           </item>
-           <item rowspan="2" row="1" column="0" colspan="2" >
-            <widget class="QLabel" name="textLabel3_4" >
-             <property name="text" >
-              <string>&amp;Double click</string>
-             </property>
-             <property name="wordWrap" >
-              <bool>false</bool>
-             </property>
-             <property name="buddy" >
-              <cstring>double_click_combo</cstring>
-             </property>
-            </widget>
-           </item>
-           <item rowspan="2" row="1" column="2" >
-            <widget class="MyComboBox" name="double_click_combo" >
-             <property name="sizePolicy" >
-              <sizepolicy>
-               <hsizetype>7</hsizetype>
-               <vsizetype>0</vsizetype>
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-            </widget>
-           </item>
-           <item rowspan="2" row="1" column="3" colspan="2" >
-            <spacer>
-             <property name="orientation" >
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeType" >
-              <enum>QSizePolicy::Expanding</enum>
-             </property>
-             <property name="sizeHint" >
-              <size>
-               <width>111</width>
-               <height>31</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-          </layout>
-         </item>
-        </layout>
-       </item>
-       <item row="3" column="1" >
+       <item row="8" column="1" colspan="3" >
         <spacer>
          <property name="orientation" >
           <enum>Qt::Vertical</enum>
@@ -291,7 +117,121 @@
          </property>
         </spacer>
        </item>
-       <item row="1" column="1" >
+       <item row="0" column="1" colspan="3" >
+        <widget class="QLabel" name="textLabel1_16" >
+         <property name="text" >
+          <string>Button functions:</string>
+         </property>
+         <property name="wordWrap" >
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="2" >
+        <widget class="QComboBox" name="xbutton2_click_combo" />
+       </item>
+       <item row="4" column="2" >
+        <widget class="QComboBox" name="xbutton1_click_combo" />
+       </item>
+       <item row="3" column="2" >
+        <widget class="QComboBox" name="middle_click_combo" />
+       </item>
+       <item row="1" column="2" >
+        <widget class="MyComboBox" name="left_click_combo" >
+         <property name="sizePolicy" >
+          <sizepolicy>
+           <hsizetype>7</hsizetype>
+           <vsizetype>0</vsizetype>
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="2" >
+        <widget class="MyComboBox" name="double_click_combo" >
+         <property name="sizePolicy" >
+          <sizepolicy>
+           <hsizetype>7</hsizetype>
+           <vsizetype>0</vsizetype>
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="3" >
+        <spacer>
+         <property name="orientation" >
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" >
+          <size>
+           <width>161</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="4" column="3" >
+        <spacer>
+         <property name="orientation" >
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" >
+          <size>
+           <width>161</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="3" column="3" >
+        <spacer>
+         <property name="orientation" >
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" >
+          <size>
+           <width>161</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="2" column="3" >
+        <spacer>
+         <property name="orientation" >
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeType" >
+          <enum>QSizePolicy::Expanding</enum>
+         </property>
+         <property name="sizeHint" >
+          <size>
+           <width>161</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="1" column="3" >
+        <spacer>
+         <property name="orientation" >
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeType" >
+          <enum>QSizePolicy::Expanding</enum>
+         </property>
+         <property name="sizeHint" >
+          <size>
+           <width>161</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="6" column="1" colspan="3" >
         <widget class="Line" name="line7" >
          <property name="sizePolicy" >
           <sizepolicy>
@@ -312,7 +252,7 @@
          </property>
         </widget>
        </item>
-       <item row="2" column="1" >
+       <item row="7" column="1" colspan="3" >
         <layout class="QGridLayout" >
          <property name="margin" >
           <number>0</number>
@@ -362,6 +302,98 @@
           </spacer>
          </item>
         </layout>
+       </item>
+       <item rowspan="9" row="0" column="0" >
+        <layout class="QVBoxLayout" >
+         <property name="margin" >
+          <number>0</number>
+         </property>
+         <property name="spacing" >
+          <number>6</number>
+         </property>
+         <item>
+          <widget class="QLabel" name="mouse_icon" >
+           <property name="text" >
+            <string>icon</string>
+           </property>
+           <property name="wordWrap" >
+            <bool>false</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer>
+           <property name="orientation" >
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeType" >
+            <enum>QSizePolicy::Expanding</enum>
+           </property>
+           <property name="sizeHint" >
+            <size>
+             <width>20</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
+       <item row="1" column="1" >
+        <widget class="QLabel" name="textLabel2_6" >
+         <property name="text" >
+          <string>&amp;Left click</string>
+         </property>
+         <property name="wordWrap" >
+          <bool>false</bool>
+         </property>
+         <property name="buddy" >
+          <cstring>left_click_combo</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1" >
+        <widget class="QLabel" name="textLabel3_4" >
+         <property name="text" >
+          <string>&amp;Double click</string>
+         </property>
+         <property name="wordWrap" >
+          <bool>false</bool>
+         </property>
+         <property name="buddy" >
+          <cstring>double_click_combo</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1" >
+        <widget class="QLabel" name="label" >
+         <property name="text" >
+          <string>M&amp;iddle click</string>
+         </property>
+         <property name="buddy" >
+          <cstring>middle_click_combo</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="1" >
+        <widget class="QLabel" name="label_2" >
+         <property name="text" >
+          <string>X Button &amp;1</string>
+         </property>
+         <property name="buddy" >
+          <cstring>xbutton1_click_combo</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="1" >
+        <widget class="QLabel" name="label_3" >
+         <property name="text" >
+          <string>X Button &amp;2</string>
+         </property>
+         <property name="buddy" >
+          <cstring>xbutton2_click_combo</cstring>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
